--- a/Exercice_header/css/style.css
+++ b/Exercice_header/css/style.css
@@ -24,23 +24,31 @@ li a:hover{
 img{
     height: 100%;
     width: 100%;
-    float: initial;
-    position: absolute;
+    position: initial;
 }
 .texte{
     position: absolute ;
     font-size: 50px;
     color: white;
     z-index: 6;
-    top: 50%;
+    top: 30%;
     left: 50%; 
     text-align: center;
 }
 h1{
     position: absolute;
     z-index: 6;
-    color: white;
+    color: red;
     margin-left: 20px;
 }
-
-    
+video{
+    height: 100%;
+    width: 100%;
+}
+#vid{
+    width: 100%;
+    height: 100%;
+}
+body{
+    margin: 0px;
+}
