--- a/Exercice_header/css/style.css
+++ b/Exercice_header/css/style.css
@@ -4,7 +4,7 @@ ul{
     padding: 0;
     overflow: hidden;
     position: absolute;
-    left: 50%;
+    left: 40%;
     z-index: 4;
 }
 li{
@@ -21,34 +21,40 @@ li a{
 li a:hover{
     background-color:transparent;
 }
-img{
-    height: 100%;
-    width: 100%;
-    position: initial;
-}
 .texte{
     position: absolute ;
-    font-size: 50px;
-    color: white;
+    font-size: 1.5em;
+    line-height: 1.3em;
+    color:pink;
     z-index: 6;
-    top: 30%;
-    left: 50%; 
+    top: 50%;
+    left: 50%;
     text-align: center;
-}
-h1{
-    position: absolute;
-    z-index: 6;
-    color: red;
-    margin-left: 20px;
+    z-index: 2;
 }
 video{
-    height: 100%;
+    position: absolute;
+    height:auto;
     width: 100%;
+    z-index: 1;
 }
-#vid{
-    width: 100%;
-    height: 100%;
-}
-body{
+body,*{
+    padding: 0px;
     margin: 0px;
+    box-sizing: border-box;
+    font-size: 100%
+}
+#firstdiv,h1{
+    position: absolute;
+    top: 5%;
+    left: 15%;
+    transform: translate(-50%,-50%);
+    z-index: 4;
+}
+h1{
+    color:pink;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    padding: 23px 26px;
 }
