--- a/Exercice_header/css/style.css
+++ b/Exercice_header/css/style.css
@@ -27,15 +27,18 @@ li a:hover{
     line-height: 1.3em;
     color:pink;
     z-index: 6;
-    top: 50%;
+    top: 30%;
     left: 50%;
     text-align: center;
     z-index: 2;
 }
 video{
     position: absolute;
-    height:auto;
-    width: 100%;
+    height:100vh;
+    width: 100vw;
+    left: 0px;
+    top: 0px;
+    object-fit: cover;
     z-index: 1;
 }
 body,*{
