--- a/Exercice_header_2/css/style.css
+++ b/Exercice_header_2/css/style.css
@@ -30,10 +30,11 @@ ul{
     padding: 0px;
     position: absolute;
     z-index: 1;
-    top: 2%;
+    top: 5%;
     left: 50%;
     transform: translate(-50%,50%);
     width: 100%;
+    z-index: 1;
 }
 li{
     float: left;
@@ -46,35 +47,95 @@ li a{
     padding: 18px 26px;
     text-transform: uppercase;
 }
-li a:hover{
+.premier_nav :hover{
     border-bottom: 2px solid orange;
     color: orange;
 }
+.deuxieme_nav :hover{
+    border-bottom: 2px solid orange;
+    color: orange;
+}
+.premier_nav{
+    position: absolute;
+    top: 0px;
+    left: 10%;
+}
 .deuxieme_nav{
-    float: right;
+    position: absolute;
+    right:20% ;
+    z-index: 1;
 }
 .troisieme_nav{
-    float: right;
+    /*position: absolute;
+    right:10px ;
+    width: 9%;
+    border: 1px solid #FFCC45;
+    background-color: #FFCC45;
+    border-radius:  ;
+    padding: 90px;
+    top: -105px;
+    transform: translate(60px,-20%);*/
 }
 #les_titres{
     position: absolute;
     z-index: 1; 
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-40%);
 }
 .premier_titre{
     top: 50%;
     left: 90%;
-    transform: translate(50%,-50%);
+    transform: translate(30%,-55%);
+    margin-bottom: 0%;
 }
 .deuxieme_titre{
     top: 50%;
     left: 90%;
-    transform: translate(45%,-50%);
+    margin-top: 0%;
+    margin-bottom: 0%;
+    transform: translate(15%,-50%);
 }
 .troisieme_titre{
     top: 50%;
     left: 90%;
+    margin-top: 0%;
     transform: translate(-10%,-50%);
+}
+.logo{
+    position: absolute;
+    z-index: 1;
+    top: 30px;
+    left: 50%;
+    transform: translate(-50%,-40%);
+    font-size: 90px;
+    color: black;
+}
+#messenger{
+    position: fixed;
+    right: 15px;
+    bottom: 15px;
+    font-size: 60px;
+    color: black;
+}
+#aris{
+    text-transform: none;
+    font-size: 2.8rem;
+    margin: 0px 0px;
+}
+#paleo{
+    font-size: 1rem;
+}
+#nav{
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    right:-50px ;
+    width: 9%;
+    border: 1px solid #FFCC45;
+    background-color: #FFCC45;
+    border-radius: 50%;
+    padding: 50px 0px 50px 50px;
+    top: -105px;
+    transform: translate(0,60px);
 }
