--- a/Exercice_header_2/css/style.css
+++ b/Exercice_header_2/css/style.css
@@ -30,11 +30,13 @@ ul{
     padding: 0px;
     position: absolute;
     z-index: 1;
-    top: 5%;
+    top: -150px;
     left: 50%;
     transform: translate(-50%,50%);
     width: 100%;
+    height: 300px;
     z-index: 1;
+    overflow: hidden;
 }
 li{
     float: left;
@@ -57,24 +59,14 @@ li a{
 }
 .premier_nav{
     position: absolute;
-    top: 0px;
+    top: 40px;
     left: 10%;
 }
 .deuxieme_nav{
     position: absolute;
     right:20% ;
+    top: 40px;
     z-index: 1;
-}
-.troisieme_nav{
-    /*position: absolute;
-    right:10px ;
-    width: 9%;
-    border: 1px solid #FFCC45;
-    background-color: #FFCC45;
-    border-radius:  ;
-    padding: 90px;
-    top: -105px;
-    transform: translate(60px,-20%);*/
 }
 #les_titres{
     position: absolute;
@@ -105,7 +97,7 @@ li a{
 .logo{
     position: absolute;
     z-index: 1;
-    top: 30px;
+    top: 70px;
     left: 50%;
     transform: translate(-50%,-40%);
     font-size: 90px;
@@ -128,14 +120,16 @@ li a{
 }
 #nav{
     position: absolute;
-    height: 50px;
-    width: 50px;
-    right:-50px ;
-    width: 9%;
-    border: 1px solid #FFCC45;
-    background-color: #FFCC45;
+    right: 65px; 
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
-    padding: 50px 0px 50px 50px;
-    top: -105px;
-    transform: translate(0,60px);
+    background-color: #FFCC45;
+    transform: translate(60%,-40%);
+    text-align: center;
+}
+.book{
+    top: 50%;
+    left: 50%;
+    transform: translate(-10%,730%);
 }
