--- a/corps_de_page/style.css
+++ b/corps_de_page/style.css
@@ -4,33 +4,58 @@
     box-sizing: border-box;
 }
 body{
-    width: 100vh;
-    height: 100vw;
-    box-sizing: border-box;
-}
-#div_parent{
-    width: 100vw;
     height: 100vh;
-    margin: auto;
+    width: 100vw;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-around;
 }
 .div_image{
-    width: 50vw;
-    height: 50vh;
-    border: 1px solid black;
+    width: 300px;
+    height: 40%;
 }
 img{
     object-fit: cover;
     width: 100%;
     height: 100%;
-    display: block;
-    margin: auto;
 }
-#div_image1{
-    
+#div_img1{
+    position: absolute;
+    top: 0px;
+    left: 10%;
 }
-#div_image2{
-    
+#div_img2{
+    position: absolute;
+    top: 0px;
+    right: 10%;
 }
-#div_image3{
-    
+#div_img3{
+    position: absolute;
+    bottom: 10%;
+}
+p{
+    position: absolute;
+    font-size: 1.1rem;
+}
+#first_para{
+    background-color: white;
+    opacity: 0.5;
+    bottom: 0;
+    width: 100%; 
+}
+#second_para{
+    background-color: white;
+    color: black;
+    opacity: 0.5;
+    color: black;
+    bottom: 0;
+    width: 100%;
+}
+#third_para{
+    background-color: white;
+    opacity: 0.5;
+    bottom: 0;
+    width: 100%; 
 }
