--- a/corps_de_page/style.css
+++ b/corps_de_page/style.css
@@ -25,11 +25,26 @@ img{
     position: absolute;
     top: 0px;
     left: 10%;
+    overflow: hidden;
+}
+#image1{
+    transition: transform 3s;
+}
+#div_img1:hover #image1{
+    transform: scale(1.5);
 }
 #div_img2{
     position: absolute;
     top: 0px;
     right: 10%;
+    overflow: hidden;
+    margin-bottom: 0;
+}
+#div_img2:hover #second_para{
+    background-color: white;
+    color: black;
+    opacity: 0.5;
+    transform: translate(0,-102%);
 }
 #div_img3{
     position: absolute;
@@ -49,9 +64,9 @@ p{
     background-color: white;
     color: black;
     opacity: 0.5;
-    color: black;
-    bottom: 0;
     width: 100%;
+    transform: translate(0%,200%);
+    transition: transform 2s;
 }
 #third_para{
     background-color: white;
