--- a/corps_de_page/style.css
+++ b/corps_de_page/style.css
@@ -47,8 +47,17 @@ img{
     transform: translate(0,-102%);
 }
 #div_img3{
-    position: absolute;
-    bottom: 10%;
+    position: relative;
+    bottom: -500px;
+    perspective: 2000px;
+    perspective-origin: top;
+}
+.card{
+    position: relative;
+    bottom: 1%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.8s cubic-bezier(0.86,0,0.07,1);
 }
 p{
     position: absolute;
@@ -73,4 +82,19 @@ p{
     opacity: 0.5;
     bottom: 0;
     width: 100%; 
+}
+#div_img3:hover .card{
+    transform: rotateY(180deg);
+}
+.card-front,
+.card-back
+{
+    width: 300px;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+.card-back{
+    transform: rotateY(180deg);
 }
