--- a/Site_web/style.css
+++ b/Site_web/style.css
@@ -60,7 +60,7 @@ header nav ul li a{
 
 #image-principal{
     height: 580px;
-    background:url('/images/paula-borowska-cKYgt4K0g5w-unsplash.jpg') center;
+    background:url('/images/24.6\ main.jpg.jpg') center;
 }
 #image-principal h2{
     font-weight: normal;
