--- a/clone-youtube/style.css
+++ b/clone-youtube/style.css
@@ -46,6 +46,10 @@ input{
     width: 500px;
     font-size :24px ;
 }
+.rech2 button{
+    height: 40px;
+    width: 70px;
+}
 .connexion{
     position: absolute;
     right: 0;
