--- a/yoojo/css/style.css
+++ b/yoojo/css/style.css
@@ -33,6 +33,7 @@ header{
     background-color: transparent;
 }
 #div_ul ul{
+    position: sticky;
     list-style: none;
     overflow: hidden;
     margin-right: 15px;
@@ -74,4 +75,136 @@ header{
     background-color: #0078FA;
     border-radius:  50px;
     color: white;
+}
+#div_parent_presta{
+    border-bottom: 1px solid grey;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 0.5rem 96px;
+}
+#div_presta{
+    display: flex;
+    justify-content: space-around;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.presta{
+    color: #13151B;
+    margin: 8px 16px 8px 0px;
+    padding: 0 0 0 4px;
+    font-size: 1.2rem;
+}
+.presta_lien{
+    text-decoration: none;
+    color: #13151B;
+}
+#div_body_parent{
+    margin-left:19.2%;
+    margin-right: 19.2%;
+}
+#div_body_text{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5%;
+}
+.body_text{
+    color: #5d636a;
+}
+.div_cadres{
+    display: flex;
+    justify-content: space-between;
+}
+.div_cadre_2{
+    display: flex;
+    justify-content: space-between;
+}
+.img_2{
+    width: 100%;
+}
+.service{
+    text-decoration: none;
+    color: #0078FA;
+    font-size: 1.3rem;
+}
+.div_service:hover .service{
+    text-decoration: underline;
+}
+.div_cadre_text_2_parent{
+    display: flex;
+    justify-content: space-between;
+}
+.prix_cadre_2{
+    color: #5d636a;
+}
+.text_2{
+    color: #5d636a;
+}
+.div_specialiste_parent{
+    border: 1px solid #8f98a3;
+    border-radius: 10px;
+}
+.div_spec_icon{
+    display: flex;
+    justify-content: space-around;
+}
+.specialiste_text , .p_chiffre{
+    color: #5d636a;
+}
+.div_comment_cadres{
+    display: flex;
+    justify-content: space-around;
+}
+.img_comment{
+    height: 140px;
+    width: 140px;
+}
+.div_comment_img{
+    text-align: center;
+}
+.p_titre{
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+.p_com_text{
+    text-align: center;
+    color: #5d636a;
+}
+.div_vous_parent{
+    display: flex;
+    justify-content: space-between;
+    background-color: #FF6B6B;
+    border-radius: 15px;
+}
+.div_vous_text{
+    width: 50%;
+}
+.div_vous_img{
+    width: 50%;
+    height: 100%;
+}
+.img_vous{
+    width: 100%;
+    height: 100%;
+    border-radius: 0px 15px 15px 0px;
+}
+.titre_vous{
+    margin-left: 10%;
+    margin-top: 10%;
+    color: white;
+    font-size: 3rem;
+    font-weight: 500;
+    line-height: 1.3;
+}
+.text_vous{
+    color: white;
+    margin-left: 10%;
+    margin-top: 3%;
+    font-size: 1.3rem;
+}
+.decouvrir{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 10%;
+    margin-top: 3%;
 }
