--- a/yoojo/css/style.css
+++ b/yoojo/css/style.css
@@ -207,4 +207,72 @@ header{
     justify-content: space-between;
     margin-left: 10%;
     margin-top: 3%;
+    margin-bottom: 10%;
+}
+.div_confiance_parent{
+    display: flex;
+    justify-content: space-between;
+    background-color: white;
+    border: 1px #5d636a solid;
+    border-radius: 15px;
+}
+.div_confiance_text{
+    width: 50%;
+}
+.titre_conf{
+    margin-left: 10%;
+    margin-top: 10%;
+    color: #13151B;
+    font-size: 3rem;
+    font-weight: 500;
+    line-height: 1.3;
+}
+.text_conf{
+    color: #13151B;
+    margin-left: 10%;
+    margin-top: 3%;
+    font-size: 1.3rem;
+}
+.div_avis_parent{
+    width: 50%;
+    height: 100%;
+}
+.avi_conf{
+    display: flex;
+    justify-content: space-around;
+}
+.conf{
+    background-color: #5d636a;
+    width: 50%;
+    height: 200px;
+    margin: 15% 10% 2% 10%;
+}
+.avi{
+    font-weight: bold;
+}
+.avis{
+    font-weight: bold;
+    border-bottom: 1px #13151B solid;
+}
+.conf_text{
+    text-align: center;
+}
+.dic_sens_parent{
+    border-top: 1px solid grey;
+}
+.div_sens{
+    margin-left:19.2%;
+    margin-right: 19.2%;
+    display: flex;
+    justify-content: space-between;
+}
+.div_chaines_parents{
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+}
+.div_chaines{
+    margin-left:19.2%;
+    margin-right: 19.2%;
+    display: flex;
+    justify-content: space-between;
 }
