--- a/Exercice_Javascript/Calculatrice_Js/style.css
+++ b/Exercice_Javascript/Calculatrice_Js/style.css
@@ -23,7 +23,7 @@ body{
     width: 500px;
     height: 100px;
     font-size: 2rem;
-    text-align: right;
+    text-align: left;
     border: 1px brown solid;
     border-radius: 5px;
 }
